--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+/**
+https://9elements.com/bem-cheat-sheet/#navigation
+*/
+
 @import url(https://unpkg.com/ress/dist/ress.min.css);
 
 * {
