--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -10,6 +10,17 @@ https://9elements.com/bem-cheat-sheet/#navigation
     box-sizing: border-box;
 }
 
+html{
+    height: 100%;
+}
 body{
     position:relative;
+    height: 100%;
+}
+
+.content{
+    position: relative;
+    height: 100vh;
+    padding-top: 48px;
+
 }
