--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -1,17 +1,18 @@
 @charset "UTF-8";
 
-.header{
-    height: 48px;
-    background-color: lightblue;
-    box-shadow: -1px -1px 5px 0;
-}
+// .header{
+// }
 
 .header__wrapper{
     position:fixed;
     top: 0;
     right: 0;
     width: 100%;
-    height: 70px;
+    height: 48px;
+    box-shadow: -1px -1px 5px 0;
+
+    background-color: lightblue;
+    z-index: 100;
 }
 
 .header__inner{
