--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -20,13 +20,13 @@ body{
 
 .content-wrapper{
     width: 100%;
-    display: grid;
-    place-content: center;
+    display: flex;
+    justify-content: center;
 }
 .content{
     position: relative;
     width: 100%;
-    max-width: 1080px;
+    max-width: 1280px;
     height: 100vh;
     padding: 48px 0 0 0;
     display:flex;
