--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@import '_Const.scss';
+
 footer{
     position: absolute;
     bottom: 0;
@@ -7,6 +9,6 @@ footer{
     width: 100%;
     height: 16px;
     text-align: center;
-    background-color: lightblue;
+    background-color: $main_color;
     font-size: 8px;
 }
