--- a/src/scss/SideNav.scss
+++ b/src/scss/SideNav.scss
@@ -1,19 +1,33 @@
 @charset "UTF-8";
 
+@import '_Const.scss';
+
+
+/**
+* SP Style
+*/
 .side-nav{
     height: 100%;
-    width: 30%;
+    width: 15%;
     background-color: burlywood;
 }
 
-@media screen and (min-width:1280px){
 
+/**
+* Table Style
+*/
+@media screen and (min-width:$tablet_width){
+    .side-nav{
+        width: 20%;
+    }
 }
 
-@media screen and (min-width:1003px) and ( max-width:1279px){
 
-}
-
-@media screen and (min-width:1002px) { 
-
+/**
+* PC Style
+*/
+@media screen and (min-width:$pc_width) { 
+    .side-nav{
+        width: 20%;
+    }
 }
