--- a/src/scss/_Const.scss
+++ b/src/scss/_Const.scss
@@ -3,8 +3,8 @@
 $main_color:lightblue;
 
 $max_width:1280px;
-$pc_width:$max_width;
-$tablet_width:1024px;
-$sp_width:599px;
+$pc_width:769px;
+$tablet_width:481px;
+// $sp_width:480px;
 
 $header_height:48px;
