--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -20,6 +20,7 @@ body{
     position:relative;
     height: 100%;
     overflow-y: auto;
+
 }
 
 .content{
@@ -32,7 +33,7 @@ body{
         width: 100%;
         max-width: $max_width;
         height: 100vh;
-        padding: 48px 0 0 0;
+        padding: $header_height 0 $footer_height 0;
         display:flex;
         flex-wrap: wrap;
     }
