--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -7,7 +7,7 @@ footer{
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 16px;
+    height: $footer_height;
     text-align: center;
     background-color: $main_color;
     font-size: 8px;
