--- a/src/scss/_Const.scss
+++ b/src/scss/_Const.scss
@@ -23,19 +23,19 @@ $break-points: (
 }
 
 $sp-width-map:(
-    side-nav:14%,
+    side-nav:70px,
     main:86%,
     right-nav:0,
 );
 
 $tablet-width-map:(
-    side-nav:14%,
+    side-nav:100px,
     main:86%,
     right-nav:0,
 );
 
 $pc-width-map:(
-    side-nav:12%,
+    side-nav:153px,
     main:63%,
-    right-nav:25%,
+    right-nav:320px,
 );
