--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -30,12 +30,12 @@ body{
     
     &__inner{
         position: relative;
+        height: 100vh;
         width: 100%;
         max-width: $max_width;
-        height: 100vh;
         padding: $header_height 0 $footer_height 0;
         display:flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
     }
     
 }
