added columns color

--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -9,6 +9,6 @@ footer{
     width: 100%;
     height: $footer_height;
     text-align: center;
-    background-color: $main_color;
+    background-color: $layout_color;
     font-size: 8px;
 }
