--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -14,7 +14,7 @@
         width: 100%;
         height: $header_height;
         box-shadow: -1px -1px 5px 0;
-        background-color: $main_color;
+        background-color: $layout_color;
         z-index: 10;
     }
     
