--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -4,11 +4,10 @@
 
 
 .main{
-    
     // SP Style
     height: 100%;
     flex-grow: 1;
     flex-shrink: 1;
-    background-color: beige;
+    background-color: $columns_color;
 
 }
