refactored min-height of timeine

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -4,7 +4,7 @@
 https://9elements.com/bem-cheat-sheet/#navigation
 */
 
-@import url(https://unpkg.com/ress/dist/ress.min.css);
+@import './venders/ress.css';
 @import '_Const.scss';
 
 
@@ -12,23 +12,19 @@ https://9elements.com/bem-cheat-sheet/#navigation
     box-sizing: border-box;
 }
 
-html{
-    height: 100%;
-}
-
 body{
     position:relative;
-    height: 100%;
 }
 
 .content{
     width: 100%;
     display: flex;
     justify-content: center;
+    min-height: 100vh;
     
     &__inner{
         position: relative;
-        height: 100%;
+        min-height: 100vh;
         width: 100%;
         max-width: $max_width;
         padding: $header_height 0 $footer_height 0;
