modified sytle in TaskCard

--- a/src/components/tasks/Tasks.scss
+++ b/src/components/tasks/Tasks.scss
@@ -1,3 +1,11 @@
 @charset "UTF-8";
 
-@import '_Const.scss';
+@import '../../scss/Const';
+
+.task-main{
+    
+    .task-list{
+        padding: 12px;
+
+    }
+}
