--- a/src/components/tasks/Tasks.scss
+++ b/src/components/tasks/Tasks.scss
@@ -3,8 +3,10 @@
 @import '../../scss/Const';
 
 .task-main{
-    
+    width: 100%;
+
     .task-list{
+        width: 100%;
         padding: 12px;
 
     }
