created Taskform and styleing css

--- a/src/components/tasks/Tasks.scss
+++ b/src/components/tasks/Tasks.scss
@@ -3,11 +3,12 @@
 @import '../../scss/Const';
 
 .task-main{
+    display: flex;
+    flex-wrap: nowrap;
     width: 100%;
 
     .task-list{
-        width: 100%;
         padding: 12px;
-
+        width: 100%;
     }
 }
