styled codes with prettier

--- a/src/components/tasks/Tasks.scss
+++ b/src/components/tasks/Tasks.scss
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 
-@import '../../scss/Const';
+@import "../../scss/Const";
 
-.task-main{
-    display: flex;
-    flex-wrap: nowrap;
+.task-main {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+
+  .task-list {
+    padding: 12px;
     width: 100%;
-
-    .task-list{
-        padding: 12px;
-        width: 100%;
-    }
+  }
 }
